squashing bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,7 +168,3 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
-
-.react-datepicker-popper {
-  z-index: 1000 !important;
-}
